<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>cz.bliksoft.java</groupId>
	<artifactId>common-java-utils-jfx</artifactId>
	<version>${revision}</version>
	<name>BSToolbox-jfx</name>
	<description>JavaFX application framework providing reusable infrastructure for OpenJFX GUI applications: module lifecycle, session/rights management, declarative UI building, action binding, observable bean patterns and UI state persistence.</description>
	<url>https://github.com/jelinj8/Java-BSToolbox-jfx</url>
	<packaging>jar</packaging>

	<licenses>
		<license>
			<name>GNU Lesser General Public License v2.1</name>
			<url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>jelinj8</id>
			<name>Jakub Jelínek</name>
			<email>jakub.jelinek@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/jelinj8/Java-BSToolbox-jfx.git</connection>
		<developerConnection>scm:git:https://github.com/jelinj8/Java-BSToolbox-jfx.git</developerConnection>
		<url>https://github.com/jelinj8/Java-BSToolbox-jfx</url>
	</scm>

	<properties>
		<revision>0.2-SNAPSHOT</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<javafx.version>21.0.11</javafx.version>
	</properties>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>package</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.10.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>cz.bliksoft.java</groupId>
				<artifactId>dependency-management</artifactId>
				<version>1.21.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>cz.bliksoft.java</groupId>
				<artifactId>common-java-utils</artifactId>
				<version>0.7-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>cz.bliksoft.java</groupId>
				<artifactId>bsdataflow</artifactId>
				<version>0.1-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>common-java-utils</artifactId>
		</dependency>
		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>bsdataflow</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>dependency-management-log4j</artifactId>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>dependency-management-freemarker</artifactId>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>dependency-management-junit</artifactId>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>dependency-management-jaxb</artifactId>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.2.3</version>
		</dependency>

		<dependency>
			<groupId>com.github.weisj</groupId>
			<artifactId>jsvg</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>

		<dependency>
			<groupId>com.github.sarxos</groupId>
			<artifactId>webcam-capture</artifactId>
			<version>0.3.12</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>opencv-platform</artifactId>
			<version>4.10.0-1.5.11</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- compile -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.5</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.7.3</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>9.2.0</version>

				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>

				<configuration>
					<dotGitDirectory>${maven.multiModuleProjectDirectory}/.git</dotGitDirectory>

					<!-- writes the file that your runtime code will read -->
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>
						${project.build.outputDirectory}/git.properties
					</generateGitPropertiesFilename>

					<!-- so you get git.commit.id and git.commit.id.abbrev -->
					<commitIdGenerationMode>full</commitIdGenerationMode>

					<!-- helpful for CI/builds from source tarballs etc. -->
					<failOnNoGitDirectory>false</failOnNoGitDirectory>

					<!-- optional: keep the file small (adjust to what you read) -->
					<includeOnlyProperties>
						<includeOnlyProperty>^git\.build\.version$</includeOnlyProperty>
						<includeOnlyProperty>^git\.branch$</includeOnlyProperty>
						<includeOnlyProperty>^git\.commit\.id\.abbrev$</includeOnlyProperty>
						<includeOnlyProperty>^git\.tags$</includeOnlyProperty>
						<includeOnlyProperty>^git\.closest\.tag\.name$</includeOnlyProperty>
						<includeOnlyProperty>^git\.closest\.tag\.commit\.count$</includeOnlyProperty>
						<includeOnlyProperty>^git\.dirty$</includeOnlyProperty>
					</includeOnlyProperties>

				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>add-generated-sources</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>
									${project.build.directory}/generated-sources/versioninfo</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>templating-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>filter-sources</goal>
						</goals>
						<phase>generate-sources</phase>
					</execution>
				</executions>
				<configuration>
					<outputDirectory>
						${project.build.directory}/generated-sources/versioninfo</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.24.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<configFile>src/formatter/EclipseFormatter.xml</configFile>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
